2010-01-03  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-tinyurl-get): more descriptive
	error message
	(twittering-url-copy-file-async): more descriptive error message

2010-01-02  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el (twittering-start-http-ssl-session):
	Set noninteractive using lexical-let so the HTTP sentinel can
	receive its value and `twittering-new-tweets-hook' works
	correctly.

2010-01-02  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-use-show-minibuffer-length): New
	defvar to enable/disable a function which is show the number of
	charactors in minibuffer.
	(twittering-update-status-from-minibuffer): Refer it to add/remove
	hooks.

2009-12-30  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/server.rb: add. Twitter API and Proxy mock server

	* twittering-mode.el (twittering-get-response-header)
	(twittering-get-response-body): Raise an error on broken
	responses.

2009-12-30  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-get-response-header): On failure,
	the function returns an empty string instead of the whole contents
	of the buffer.
	(twittering-get-response-body): When the function fails to find
	the tail of header, it returns nil without trying to parse a
	region.
	(twittering-find-proxy): add new function for
	finding proxy.
	(twittering-setup-proxy): add new function for configuring
	`twittering-proxy-server' and `twittering-proxy-port' if they have
	not been configured yet.
	(twittering-mode-init-variables): invokes
	`twittering-setup-proxy'.

2009-12-30  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-response-header): Correct a
	reference to an unbound object. This problem was found by highmt.

2009-12-30  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/el-test-runner.el (with-network): add macro. body of
	with-network is executed only when 'NETWORK' env var is set.